--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-asset": "^8.6.1",
@@ -17,7 +18,9 @@
     "react": "18.0.0",
     "react-dom": "^18.2.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
