--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-native": "0.69.6",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "redux-devtools-extension": "^2.13.9"
   },
   "private": true
 }
