--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/stack": "^6.3.14",
     "@reduxjs/toolkit": "^1.9.2",
-    "expo": "~46.0.9",
-    "expo-app-loading": "~2.1.0",
-    "expo-asset": "^8.6.1",
-    "expo-font": "~10.2.0",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.69.6",
+    "expo": "^47.0.0",
+    "expo-app-loading": "~2.1.1",
+    "expo-asset": "~8.7.0",
+    "expo-blur": "~12.0.1",
+    "expo-font": "~11.0.1",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "redux-devtools-extension": "^2.13.9"
   },
   "private": true
