--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.4",
     "expo": "^47.0.0",
     "expo-app-loading": "~2.1.1",
     "expo-asset": "~8.7.0",
