--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
